feat: Update dependencies and core game structure
This commit introduces significant updates to the project's dependencies and refactors core game structures.

Key changes include:

- **Dependency Updates:** Upgraded React, Pixi.js, and various utility libraries. Added new dependencies for particle effects, audio handling, and internationalization.
- **Internationalization (i18n):** Integrated `i18next` and related libraries for future multilingual support.
- **Pixi.js Integration:** Updated `pixi.js` and added `@pixi/particle-emitter` to enable advanced visual effects.
- **Game State Refinement:** Introduced new interfaces for `Plant`, `Ritual`, `Zone`, `GameEvent`, and `Achievement` to provide a more robust and flexible game state management. Removed outdated types.
- **Core Game Logic:** Updated `calculateChiPerSecond` to reflect new plant mechanics.
- **Component Structure:** Prepared `App.tsx` for expanded UI elements by adding placeholders for modals, settings, and other panels.
- **Service Worker:** Added basic service worker integration for potential offline capabilities and PWA features.
- **Error Handling:** Improved initial setup error handling in `index.tsx`.
- **Code Style:** Enforced consistent type definitions and imports.

--- a/index.html
+++ b/index.html
@@ -1,37 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roots of the Earth</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    #pixi-canvas {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1; /* Ensures it's in the background */
-    }
-  </style>
-</head>
-<body>
-  <div id="root"></div>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
+    "@pixi/particle-emitter": "https://aistudiocdn.com/@pixi/particle-emitter@^5.0.8",
+    "howler": "https://aistudiocdn.com/howler@^2.2.4",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "pixi.js": "https://aistudiocdn.com/pixi.js@^8.14.0",
     "zustand": "https://aistudiocdn.com/zustand@^5.0.8",
     "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.24.0",
-    "pixi.js": "https://aistudiocdn.com/pixi.js@^8.2.5",
-    "react-tooltip": "https://aistudiocdn.com/react-tooltip@^5.30.0"
+    "i18next": "https://aistudiocdn.com/i18next@^25.6.0",
+    "react-i18next": "https://aistudiocdn.com/react-i18next@^16.2.2",
+    "i18next-browser-languagedetector": "https://aistudiocdn.com/i18next-browser-languagedetector@^8.2.0",
+    "vitest": "https://aistudiocdn.com/vitest@^4.0.5"
   }
 }
 </script>
-  <script type="module" src="/index.tsx"></script>
-</body>
-</html>
+full contents of index.html
