feat: Improve app initialization and state management
Refactors the application's initialization process to integrate boot diagnostics and a more robust state management lifecycle.

Key changes include:
- Centralizing i18n setup and console error patching in `index.tsx`.
- Introducing a `BootDiagnostics` component for better boot-time feedback.
- Enhancing `App.tsx` to manage hydration status and conditionally enable the game loop.
- Improving `gameStore.ts` to handle state rehydration, version mismatches, and corrupted save data, while also integrating with boot diagnostics.
- Updating `package.json` to remove an unused script.

--- a/index.html
+++ b/index.html
@@ -9,24 +9,27 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <link rel="stylesheet" href="/index.css">
     <script type="importmap">
-    {
-      "imports": {
-        "@pixi/particle-emitter": "https://aistudiocdn.com/@pixi/particle-emitter@^5.0.8",
-        "howler": "https://aistudiocdn.com/howler@^2.2.4",
-        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
-        "react": "https://aistudiocdn.com/react@^19.2.0",
-        "react/": "https://aistudiocdn.com/react@^19.2.0/",
-        "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
-        "pixi.js": "https://aistudiocdn.com/pixi.js@^8.14.0",
-        "zustand": "https://aistudiocdn.com/zustand@^5.0.8",
-        "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/",
-        "i18next": "https://aistudiocdn.com/i18next@^25.6.0",
-        "react-i18next": "https://aistudiocdn.com/react-i18next@^16.2.2",
-        "i18next-browser-languagedetector": "https://aistudiocdn.com/i18next-browser-languagedetector@^8.2.0",
-        "vitest": "https://aistudiocdn.com/vitest@^4.0.5"
-      }
-    }
-    </script>
+{
+  "imports": {
+    "@pixi/particle-emitter": "https://aistudiocdn.com/@pixi/particle-emitter@^5.0.8",
+    "howler": "https://aistudiocdn.com/howler@^2.2.4",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "pixi.js": "https://aistudiocdn.com/pixi.js@^8.14.0",
+    "zustand": "https://aistudiocdn.com/zustand@^5.0.8",
+    "zustand/": "https://aistudiocdn.com/zustand@^5.0.8/",
+    "i18next": "https://aistudiocdn.com/i18next@^25.6.0",
+    "react-i18next": "https://aistudiocdn.com/react-i18next@^16.2.2",
+    "i18next-browser-languagedetector": "https://aistudiocdn.com/i18next-browser-languagedetector@^8.2.0",
+    "vitest": "https://aistudiocdn.com/vitest@^4.0.5",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "path": "https://aistudiocdn.com/path@^0.12.7",
+    "vite": "https://aistudiocdn.com/vite@^7.1.12"
+  }
+}
+</script>
   </head>
   <body>
     <div id="root"></div>
